added h1 and p tags

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
  <body>
-
+     <h1>Hi, this should be big text!</h1>
+   	<p>My first paragraph which should be longer than just one sentence.</p>
  </body>
 </html>
 
