added bold and underline

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
  <body>
      <h1>Hi, this should be big text!</h1>
    	<p>My first paragraph which should be longer than just one sentence.</p>
+  <p>Don’t use this, but use your own sentence with your own <b>text to bold</b>, ok?
+	Think of another sentence with <u>text to underline</u> and enter it.</p>
  </body>
 </html>
 
